--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "@crsincca/xrd-main-gui-module",
-    "version": "0.1.3",
-    "description": "Main GUI plugin module for crsinc xrd project.",
+    "name": "@crsincca/xrd-load-file-module",
+    "version": "0.1.0",
+    "description": "Load file plugin module for crsinc xrd project.",
     "main": "index.js",
     "scripts": {
         "test": "jest"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/crsincca/xrd-main-gui-module.git"
+        "url": "git+https://github.com/crsincca/xrd-load-file-module.git"
     },
     "keywords": [
         "srcinc",
@@ -19,9 +19,9 @@
     "author": "Yury Yuryev <yu.yuryev.dev@gmail.com>",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/crsincca/xrd-main-gui-module/issues"
+        "url": "https://github.com/crsincca/xrd-load-file-module/issues"
     },
-    "homepage": "https://github.com/crsincca/xrd-main-gui-module#readme",
+    "homepage": "https://github.com/crsincca/xrd-load-file-module#readme",
     "dependencies": {
         "@crsincca/xrd-dispatch-module": "^0.1.3",
         "react": "^16.13.1",
