--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "url": "git+https://github.com/crsincca/xrd-load-file-module.git"
     },
     "keywords": [
-        "srcinc",
+        "crsinc",
         "xrd",
         "plugin",
         "gui"
